# ChangeLog for app-text/po4a
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/po4a/ChangeLog,v 1.64 2013/02/04 09:46:15 ago Exp $

  04 Feb 2013; Agostino Sarubbo <ago@gentoo.org> po4a-0.42.ebuild:
  Stable for alpha, wrt bug #453122

  29 Jan 2013; Agostino Sarubbo <ago@gentoo.org> po4a-0.42.ebuild:
  Stable for ia64, wrt bug #453122

  26 Jan 2013; Agostino Sarubbo <ago@gentoo.org> po4a-0.42.ebuild:
  Stable for ppc64, wrt bug #453122

  26 Jan 2013; Agostino Sarubbo <ago@gentoo.org> po4a-0.42.ebuild:
  Stable for ppc, wrt bug #453122

  26 Jan 2013; Markus Meier <maekke@gentoo.org> po4a-0.42.ebuild:
  arm stable, bug #453122

  24 Jan 2013; Agostino Sarubbo <ago@gentoo.org> po4a-0.42.ebuild:
  Stable for x86, wrt bug #453122

  24 Jan 2013; Agostino Sarubbo <ago@gentoo.org> po4a-0.42.ebuild:
  Stable for amd64, wrt bug #453122

  20 Sep 2012; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Remove redundant maintainer from metadata.

*po4a-0.42 (02 Sep 2012)

  02 Sep 2012; Tim Harder <radhermit@gentoo.org> +po4a-0.42.ebuild:
  Version bump.

  24 Mar 2012; Fabian Groffen <grobian@gentoo.org> po4a-0.41.ebuild:
  Marked ~x64-macos

  29 May 2011; Torsten Veller <tove@gentoo.org> +files/0.41-po4a-build.patch,
  po4a-0.41.ebuild:
  Depend on dev-libs/libxslt, app-text/docbook-xsl-stylesheets (#368909),
  app-text/docbook-xml-dtd:4.1.2. Work around the endless waiting if output is
  redirected (#369011)

*po4a-0.41 (22 May 2011)

  22 May 2011; Torsten Veller <tove@gentoo.org> +po4a-0.41.ebuild:
  Version bump. Thanks to Tim Harder (#368303)

  07 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> po4a-0.38.ebuild:
  ppc64 stable wrt #350877

  19 Oct 2010; Torsten Veller <tove@gentoo.org>
  -files/0.36-3-debian.patches, -files/po4a-fix-io-capture.patch:
  Cleanup

  19 Oct 2010; Torsten Veller <tove@gentoo.org> -po4a-0.32-r1.ebuild,
  -po4a-0.34.ebuild, -po4a-0.36.ebuild, -po4a-0.36.4.ebuild,