@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 0.41-po4a-build.patch 589 SHA256 1ad6b20cf5306bc19a1d9509094a3ec9313f1570228d9675133595fb1690769e SHA512 d7e38fc7e2212291158dd4fa9219df92261e5d1880b004220aad4a66caf8e33a2ac77bc7606e832ac9b75fdc2646a38a7d5d2395dca9f928d389ca2a0ce154c1 WHIRLPOOL ab0c6fd3246f69560ea8617bf4ce5d2e0192cc55f9805f94fe2f602f92b8e6603cdedb592126e0cc189a8336bccd2938fe4e5be337d1098ed8325c88a1a634a0
 AUX compare-po.pl 787 SHA256 6111bffd2dc6cd7411df82387ecbfa8b3efdc46b90e3571560a770f876fb51d0 SHA512 65b0d97af8e736a6a05f9f9ae3c84019b0e2d12719bec1286c55fc9f39ad38d15f3c0d4c6aa25808fe8b4038cd0ed71d6a66e6d5fdeaf76938021a4a38d549dc WHIRLPOOL cda37c33fc2f03fba8bf296bd2d97a3b49307ea1669e77d5d32a7c964b7192e1ba0529f11d37f38366aa937dfa3578caf253339334011c15413e36abd92c58a2
 DIST po4a_0.38.orig.tar.gz 1627655 SHA256 81425b4c6ce35e337ea1496eed0f2ca041a2b78a4a7aa5bef7bb14b3928cae87 SHA512 f9ec17ff7500c3e50f76d16c27cb736735a917163cc6eeb804e895fab4fc48f429ebd5b91baf6843838965ab6e85ab9dc3d02c2ad6a6d9ee4c49d2f45b6027c7 WHIRLPOOL 736d505242c63364f9045b521611c85483b69504533afac8d87e391816f1fda69908d085590ac68a480c3eeb263378515e6f66a53f194e419446c046e3d9d457
@@ -9,6 +12,13 @@ EBUILD po4a-0.38.ebuild 1031 SHA256 2ccb73a267fcad4edc790bbcce07af0257ee506fd145
 EBUILD po4a-0.39.ebuild 1037 SHA256 adf82d2490e139449baefe83e86144aab7e99567bb881684d71b756e25b64c2d SHA512 8908245b8aaecdcda7c7a9baecf49431b16a147e02fe9ced7f558704602ed562fa1b432cf92e54fd768c593ba35c217fbf375a48da172d21df52e8d3dba71733 WHIRLPOOL 28039608d9eaa86c4cbb97a718599a4face19a4d44104aa61346c02512ab5ec75ebbb6d42c5ee43cf301f41bcc402b8ac1d2d0d54393994f3a325ccc5b367121
 EBUILD po4a-0.40.1.ebuild 1098 SHA256 b0da26644798f0d977c6ab8084681924cacff650cfaab80599a19d0945ee2462 SHA512 8659e259afe23f53a958c039606e28c46fb2f9b95fb69f6a238dce4f2fba2f9d711d132185d0db069e531fa553f44ecbf7a0a8711a94f6df56a9fa54790928d1 WHIRLPOOL 50fe5fc77a32eaa562a93b6cdc1736c9b9580b1a55c9cee445829da635f8438a17cc55ad5204b5788b5a698876e651852261eca460e7340ffda8538c43309fc4
 EBUILD po4a-0.41.ebuild 1049 SHA256 f6cb49a37d35d0eec3a7e0328b9302fee7e08d90c6015c5a1eb81be671ea91fd SHA512 af5274cbf6a41f074c64d3ac26d3054c22fcfb0693d211cae1fff17464356bb1e086eeb72e188477c13f9c0f76358d7af01103fa694896105f6eca259674a930 WHIRLPOOL d577484fdd0d28b7af601427029f17f45a3af9a7f74abc5a795ba0522fb71c1090c0979e70033636eda00a4af09e56e1fc832955193742e7b42faa3128cf7824
-EBUILD po4a-0.42.ebuild 1036 SHA256 d404638076ceda692770e50260157ce3d08853a2c1671542b26ef34173828089 SHA512 61c375d2d841f58abcb60c62636c839a052dadea5d5c33028c1a30eceb67edac10f6157cda7ff7ecd379ca9845ce04cceb75e03af27b7491e2a06262d38ba7b8 WHIRLPOOL e4a8dfe99b3fcc9b0f11ad306985f1bdf6c045108b60cf38b2267df7e1f92f901b9a17dfa67f502eba09737392bd41fb33b1867a4aeb8a9e152ceef33f7f1ee5
-MISC ChangeLog 8329 SHA256 965e85155dac60a6456786969d62a09311b78a78c3f51f11d9d77c9602d370ce SHA512 2b4162f8c9aaea70a41c45bf4ecb14c5e32a2249f8f6ed30daf333bdefa5ec8e4225920238a004a49bdcec04bf146bae2957f8700d3fdd7f9a0b925f4c87de38 WHIRLPOOL f712df13ffb364dfe13576da0fad08eeb3ecbbdebe3ee0a48a0ba32a997f4733b1810c03313973a6169f9a2b69c084746be0bbb6d96e07d05b808d98deca0c7b
+EBUILD po4a-0.42.ebuild 1035 SHA256 571c686759eba5379fbc5ca5beaea69ade57da1573f2a5030656403a46e2bf7a SHA512 28a39a1598f4ea555586946485a6d92761ffda70eaefbecc933823e19aab9cbe99e671e3f5ec0b65ad13ca254f241628d58bc87156ae3ff685ab5b5ae561e770 WHIRLPOOL db2a08f0cbe4c5e5f888470e6e863f54e9c86d8159ed1bc84831bc4c425777b85bb17e2e895a68372a18e2f6cc0ba88d6e8e8d3737ed93ca402b1066f5631d03
+MISC ChangeLog 8428 SHA256 3319f6f492772d88c1bf1efac5b594de6a097832bb489ef29cd198a741bded82 SHA512 5d003fe748c48d690d1ebe2916d8cb81648d541cd4714796197262ba922650fd0089d21f83ad3caa69068147b691f97a9434a268ecb00e97bf493c4aa6bbc9ab WHIRLPOOL e03434e914753eda5498b97a33b851f16b52ac29ffa86d5720ec4d3276106e0bcdc7d7d699b8f24bd436a9bd62b51499338ed625f3f285906f1b017c03b49dee
 MISC metadata.xml 157 SHA256 6a11fd41a2a210a9760849de398ef8c62cf46cc742d09b2e1781def7848fa1ec SHA512 95158d74d42674de03bc271c8dffa2264759c77681436de71fa9b3ad67f50b09394b0401e6df6dde526bc8dcd6ea666ed6767662bd63c3e92cb33b7b23e4ede8 WHIRLPOOL d3fdf14c384070120719ad4076cd04630790564f5bceda2a273e6481ea27a6fc6291e55d78cbf8bf99b73c7b42e8a1f286927c990702dceee97a63815cb33846
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlERB9sACgkQVWmRsqeSphOC6ACeMCCAV++Ej1y6fXlqo4FEppEY
+6+YAn1kpEaZK5GRA2FfHfkCDQjZ2WYNw
+=jJ51
+-----END PGP SIGNATURE-----
