@@ -1,9 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX psad-2.2-var-run.patch 236 SHA256 fca16b2ef888f46e5eed5195a06231bbbe1fcd4d2e33547ff802c16075a78e01 SHA512 66845bd3dec96fc84b07c827f03520c94bdd7317e1df1f0f2b66a821ced45242c72f61aa5b82d6be5d2fc00d2f88671539808214545950db90c2dd0b7188e039 WHIRLPOOL fae6accd66b6e0d156291ee0bfc515415c41a334fee881cab4574a7e8b247260f736f970c357e94e4520c82e143b0edfbddab4f000887e6eacf4ac4640f7d20e
-DIST psad-2.1.7.tar.bz2 967130 SHA256 4342be5716e4b5aa630fb5a4c4cdd79f0732787a4859bd5d50aca49e3637b7a3 SHA512 13348424c874f0604d2b69c30e260e5e6d4e5c00bcad395e2f84168ace1c0242eb82e41f95667c83def28fde2e82e545f474009118de72bc4801bb1b564380ae WHIRLPOOL 40687183eaa5c9f62358268d4b55a74520011aa8667ea00206cc4ed5148b76f2b5a9a9f54cc161dd1680ff9169ac3276e34bf979db446d84966988f876f0ffa1
 DIST psad-2.2.1.tar.bz2 1255544 SHA256 17befa8879f326d8f416c4827ec4241c6a8882656776d677f1b7ed05728e9728 SHA512 08a4173126f3b9ea592224cd0079b41156e15366643f2347e6dbfe01a89bca112d3d94b0ec593da6c8fc9782befa74aad4a66b4117a40523d28a25bc1f1508c4 WHIRLPOOL fe22d8c1af4138f430e544c5b05de77f94e028261972d16b745d3a45f7b19cfacdb929701a10c8df95f3818174731223fa3ab87bfedec1ae5d6d203ed2da6f7a
 DIST psad-2.2.tar.bz2 1219681 SHA256 75820c2148499459c6d9ff33c34e69d07686f5fe28d54a16ba2fb29ea5f616ad SHA512 f6ae68bf5b5619dc1a2b97d6bc68037d4525928f3e96ed988e0fcca5fa7fd3e0440aec87f853c8115b3861c7cab9f6908fa5a7af8b8c7b2d9701b2601285ee78 WHIRLPOOL 58633a476c9e37f00c84d925d0bc5f01171124c20ff82a871e56f2bd95ba2c354ca2c6ebcd177e8a73af75c232cb13a15d5b79cc24477f85a53032ec024eabe3
-EBUILD psad-2.1.7.ebuild 4228 SHA256 83ba8c2f6dc58f5a87381c63a87e778b2ebdb2e57a8d14a59fd6498f8556357f SHA512 a5ce0950179627fd1610b375b55e393475e6b69d7bef7fc865070f196e1c588565d4f711fd547785397ff256296292c0b51ed0cbabfc894a86d0febf42367311 WHIRLPOOL 11e606c17404e56dfc3768adc46e7975ff4409297b3ef5de48c486e047dd28306736e101ec8596b6183bee8fe548f865ebde242313d5d060cf5ada97f7d2147d
 EBUILD psad-2.2-r1.ebuild 2301 SHA256 3a730b75362607f5978ca9886f5e7df6dae470980bf3fa9c8c7311281fee6fd0 SHA512 9761a863df8cdd6c09b211adf0b06d8802fd4dcf0c2ff6d7a4c7d706f089699506fc30b506c9618594b1ecd8edf3143f7048303832060c251d8cd14b2129cbf9 WHIRLPOOL eebd585395fdbe140b7d2793dcf5b3e9ee3b523d8c77735b4fd7865e938bc7aabd1eba987c3033a2cd259d64c257867f4090574cd2b5909ef4944dea484520f5
 EBUILD psad-2.2.1.ebuild 2275 SHA256 f13472f600ee985f71d1482d0cf2e92cec753b9b4f2ddd3be3a384806f5d5626 SHA512 2e6cd52786bafd20fe6b0a74e927c881ab4dc5aacf150eb25e395b6ad6ad936de837eabf9deac284e8b786c8b45849d6687413d284c2fda9580bb8d0e7f9305d WHIRLPOOL 4f8329d39cb4d54192283cd0448fbbee8e3c818f69d21a126bd934947668deed5e36ad293daea62bc684c4ba90704470889b79128dac6430cf5a459557254e58
-MISC ChangeLog 11137 SHA256 84c450554d0f007a1f13c968d529309cf831be23ac860d693ce6dfd38b05bc83 SHA512 29028c7411d827fdb71b516fb8ecf7fb0b63c01a3cf1d99f8bb993132519092df975a1cee8e5499cd496a5e70e1c4c9f2418a2c0ea80452047b5bc1fe657cfd3 WHIRLPOOL fa90a985228c9d5e6b792f7eb0a0b834a7fbf838a7b812f7d35f357df4c6a517be54cd4449981999f41006e3b2a014523d01a12a1bdcab60655a5af1063e1304
+MISC ChangeLog 11212 SHA256 ff6fc8616d1b9e03dbb2f1a4dbfb5b469061a8d1646eca8b57e6b86aa3903378 SHA512 9e0e69080e33ad3055329dcc5c2f3780db3d7e13b80977bd84e89d89777fcf2853249d4b6f5c5a4184b73c762486fea62d004a13cc3543c7df0f7b24f4b2c0cb WHIRLPOOL d526d87ef3fe539dcf0674bc204b890088ffa2c02df3d13b49f2311de698e36ce24e64088961e1ef0bca8c98254fbab798f8c06da5b618ec2f3a27162c64ec76
 MISC metadata.xml 159 SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6 SHA512 2c104d2a804da0a38770b6f1ec26cd5b0a49e30392177d5794734a3f4129e82fd0971e5a8a1e48913bfaf1bab57e7bac1fe5ce4f5c618ce057aa5aaf9e59113b WHIRLPOOL 044dec64f8899582332d7fbd7612d2a7c5c7234c44bb9fc51a56f7d6400cd3066a154c3c49dd3f4b468f11e029aa24ff0097ab1387b9f322d57f1d9876afd601
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlEQQQYACgkQVWmRsqeSphPiuACfSI2z/BnsIvcCslF4UODLDtp3
+ygUAn3OdP+TlbjoUHX+q7YTpzHytmvZ+
+=50qk
+-----END PGP SIGNATURE-----
