@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/psad
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/psad/ChangeLog,v 1.64 2013/02/04 09:49:12 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/psad/ChangeLog,v 1.65 2013/02/04 23:15:16 jer Exp $
+
+  04 Feb 2013; Jeroen Roovers <jer@gentoo.org> -psad-2.1.7.ebuild:
+  Old.
 
   04 Feb 2013; Agostino Sarubbo <ago@gentoo.org> psad-2.2-r1.ebuild:
   Stable for alpha, wrt bug #453550
